# gfold

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Plot_test.m  README.md  main  makefile  matlab.mat
include/: constants.hpp  eom.hpp  eom1.hpp  ode4.hpp  rk4.hpp  step.hpp  utilities.hpp
include/gnc/: AttitudeController.hpp  FixedTOF.hpp  FreeTOF.hpp  PositionController.hpp  ThrustAllocator.hpp  constants.hpp  utilities.hpp
include/nsim/: GenerateForcesMoments.hpp  ProcessNoise.hpp  SaveData.hpp  constants.hpp  eom.hpp  eom3DOF.hpp  eom6DOF.hpp  eom_3DOF.hpp  eom_6DOF.hpp  step.hpp
include/nsim/simulations/: MonteCarlo.hpp  run6DOF.hpp
results/: plotter.m  plotter_6DOF.m
src/: main  main.cpp
src/gnc/: AttitudeController.cpp  FixedTOF.cpp  FreeTOF.cpp  PositionController.cpp  ThrustAllocator.cpp
src/nsim/: GenerateForcesMoments.cpp  ProcessNoise.cpp  SaveData.cpp
src/nsim/simulations/: MonteCarlo.cpp  run6DOF.cpp
